--- a/File.Manager/File.Manager/Windows/MainWindow.xaml
+++ b/File.Manager/File.Manager/Windows/MainWindow.xaml
@@ -14,6 +14,8 @@
     <f:RibbonWindow.InputBindings>
         <KeyBinding Key="U" Modifiers="Ctrl" Command="{Binding Path=SwitchPanesCommand}" />
         <KeyBinding Key="F5" Command="{Binding CopyCommand}" />
+        <KeyBinding Key="F6" Command="{Binding MoveCommand}" />
+        <KeyBinding Key="F8" Command="{Binding DeleteCommand}" />
     </f:RibbonWindow.InputBindings>
 
     <DockPanel>
@@ -39,6 +41,7 @@
                               LargeIcon="pack://application:,,,/File.Manager;component/Resources/Images/NewFolder32.png"
                               Icon="pack://application:,,,/File.Manager;component/Resources/Images/NewFolder16.png"/>
                     <f:Button Header="{x:Static res:Strings.Ribbon_Button_Delete}" 
+                              Command="{Binding DeleteCommand}"
                               LargeIcon="pack://application:,,,/File.Manager;component/Resources/Images/Delete32.png"
                               Icon="pack://application:,,,/File.Manager;component/Resources/Images/Delete16.png"/>
                 </f:RibbonGroupBox>
