--- a/File.Manager/File.Manager/Windows/CopyMoveProgressWindow.xaml
+++ b/File.Manager/File.Manager/Windows/CopyMoveProgressWindow.xaml
@@ -15,7 +15,8 @@
         Title="{Binding Operation.Title}" SizeToContent="Height" Width="600"
         ResizeMode="NoResize"
         Loaded="HandleWindowLoaded" Closing="Window_Closing"
-        WindowStartupLocation="CenterOwner">
+        WindowStartupLocation="CenterOwner"
+        FocusManager.FocusedElement="{Binding ElementName=bCancel}">
     <Window.Resources>
         <Style TargetType="Label" x:Key="HeaderLabel">
             
@@ -52,7 +53,9 @@
                 <!-- Overall progress bar -->
 
                 <DockPanel Margin="{StaticResource DialogItemsExceptTopMargin}" HorizontalAlignment="Stretch">
-                    <Label DockPanel.Dock="Top" Margin="{StaticResource DialogItemsMargin}" Content="{Binding Operation.ProgressDescription}" />
+                    <Label DockPanel.Dock="Top" Margin="{StaticResource DialogItemsMargin}">
+                        <TextBlock Text="{Binding Operation.ProgressDescription}" />
+                    </Label>
 
                     <Label Margin="{StaticResource DialogItemsRightMargin}" DockPanel.Dock="Right" Width="40" HorizontalContentAlignment="Center"
                            Visibility="{Binding Operation.ProgressIndeterminate, Converter={StaticResource InverseBoolToVisibilityConverter}, ConverterParameter={x:Static pc:Visibility.Hidden}}">
@@ -70,7 +73,9 @@
 
                 <DockPanel Margin="{StaticResource DialogItemsExceptTopMargin}" HorizontalAlignment="Stretch">
 
-                    <Label DockPanel.Dock="Top" Margin="{StaticResource DialogItemsMargin}" Content="{Binding Operation.FileProgressDescription}" />
+                    <Label DockPanel.Dock="Top" Margin="{StaticResource DialogItemsMargin}">
+                        <TextBlock Text="{Binding Operation.FileProgressDescription}" />
+                    </Label>
 
                     <Label Margin="{StaticResource DialogItemsRightMargin}" DockPanel.Dock="Right" Width="40" HorizontalContentAlignment="Center">
                         <TextBlock>
@@ -88,7 +93,7 @@
         </GroupBox>
 
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Style="{StaticResource DialogButton}" Content="{x:Static cres:Strings.Cancel}" 
+            <Button x:Name="bCancel" Style="{StaticResource DialogButton}" Content="{x:Static cres:Strings.Cancel}" 
                     Command="{Binding CancelCommand}"/>
         </StackPanel>
 
