--- a/File.Manager/File.Manager/App.xaml
+++ b/File.Manager/File.Manager/App.xaml
@@ -1,13 +1,16 @@
 ﻿<Application x:Class="File.Manager.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:File.Manager" xmlns:conv="clr-namespace:File.Manager.Common.Wpf.Converters;assembly=File.Manager.Common.Wpf"
+             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+             xmlns:local="clr-namespace:File.Manager" 
+             xmlns:conv="clr-namespace:File.Manager.Common.Wpf.Converters;assembly=File.Manager.Common.Wpf"
              StartupUri="Windows\MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/Fluent;Component/Themes/Generic.xaml" />
-                <ResourceDictionary Source="Theme\Win11Theme.xaml" />
+                <ui:ThemesDictionary Theme="Light" />
+                <ui:ControlsDictionary />
                 <ResourceDictionary Source="Theme\Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
