--- a/File.Manager/File.Manager/Theme/Dimensions.xaml
+++ b/File.Manager/File.Manager/Theme/Dimensions.xaml
@@ -4,17 +4,7 @@
 
     <!-- General -->
     
-    <Thickness x:Key="DialogWindowPadding">10</Thickness>
-
-    <Thickness x:Key="PopupItemsMargin">8</Thickness>
-    <Thickness x:Key="PopupItemsBottomMargin" Bottom="8" />
-    <Thickness x:Key="PopupItemsTopMargin" Top="8" />
-    <Thickness x:Key="PopupItemsLeftMargin" Left="8" />
-    <Thickness x:Key="PopupItemsRightMargin" Right="8" />
-    <Thickness x:Key="PopupItemsExceptBottomMargin" Left="8" Top="8" Right="8" Bottom="0" />
-    <Thickness x:Key="PopupItemsExceptTopMargin" Left="8" Top="0" Right="8" Bottom="8" />
-    <Thickness x:Key="PopupItemsExceptLeftMargin" Left="0" Top="8" Right="8" Bottom="8" />
-    <Thickness x:Key="PopupItemsExceptRightMargin" Left="8" Top="8" Right="0" Bottom="8" />
+    <Thickness x:Key="DialogWindowPadding">24</Thickness>
     
     <Thickness x:Key="DialogItemsBottomMargin" Bottom="4" />
     <Thickness x:Key="DialogItemsTopMargin" Top="4" />
@@ -32,9 +22,14 @@
     <Thickness x:Key="DialogItemsMargin" Left="4" Top="4" Right="4" Bottom="4" />
 
     <Thickness x:Key="DefaultMargin">4</Thickness>
-       
-    <Thickness x:Key="HalfMargin" Left="3" Right="3" Top="3" Bottom="3" />
 
-    <Thickness x:Key="EditorPanelSubHeaderMargin" Left="16" Top="0" Right="4" Bottom="4" />
+    <Thickness x:Key="EditorPanelSubItem" Left="16" />
 
+    <!-- Controls -->
+
+    <Thickness x:Key="NextModernGroupBoxMargin" Left="0" Right="0" Top="16" Bottom="0" />
+
+    <Thickness x:Key="DialogHostContentPadding">16</Thickness>
+    <Thickness x:Key="DialogHostButtonsPadding">16</Thickness>
+    
 </ResourceDictionary>
