--- a/File.Manager/File.Manager/Theme/Styles.xaml
+++ b/File.Manager/File.Manager/Theme/Styles.xaml
@@ -1,10 +1,20 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="ColorsLight.xaml" />
         <ResourceDictionary Source="Dimensions.xaml" />
+        <ResourceDictionary Source="Controls.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
+    <Style TargetType="Label" x:Key="PrimaryLabel">
+        <Setter Property="Foreground">
+            <Setter.Value>
+                <SolidColorBrush Color="{DynamicResource TextFillColorPrimary}" />
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
+    <!-- -->
+    
     <Style TargetType="Button" x:Key="DialogButton" BasedOn="{StaticResource {x:Type Button}}">
         <Setter Property="Width" Value="150" />
         <Setter Property="Margin" Value="{StaticResource DialogItemsExceptLeftMargin}" />
